--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 
-<body>
+<body class="" style="background-color: #1c7293;">
     <!-- the sign up page -->
     <div class="container mx-auto">
         <div class="row">
             <div class="col-md-6 mx-auto">
                 <h1 class="text-center">Sign Up</h1>
                 <form>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Surname</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">FirstName</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Email address</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -29,7 +37,7 @@
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
                         <label class="form-check-label" for="exampleCheck1">Check me out</label>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn form-control" style="background-color: #136F63;">Submit</button>
                 </form>
             </div>
         </div>
