--- a/Welcome/welcome.html
+++ b/Welcome/welcome.html
@@ -7,7 +7,14 @@
     <link rel="icon" href="image/lovely-hand-drawn-education-concept_23-2147911538-removebg-preview.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
-<body class="mt-3" style="background-color:#1c7293;">
+<header class="shadow-lg">
+    <nav>
+      <h5 class="card-title fs-1 fw-bold text-light"><img src="image/e-learning-isometric-concept_1284-16835-removebg-preview.png"
+          class="col-1 text-center" alt="..."> 3PLEA TECH-ACADEMY</h5>
+    </nav>
+  </header>
+
+<body class="mt-3" style="background-color: #8a546d;">
     <div class="container">
            <div class="">
              <!-- first main div -->
