--- a/Welcome/welcome.html
+++ b/Welcome/welcome.html
@@ -8,13 +8,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <header class="shadow-lg">
-    <nav>
+    <nav class="mx-auto">
       <h5 class="card-title fs-1 fw-bold text-light"><img src="image/e-learning-isometric-concept_1284-16835-removebg-preview.png"
-          class="col-1 text-center" alt="..."> 3PLEA TECH-ACADEMY</h5>
+          class="col-1" alt="..."> 3PLEA TECH-ACADEMY</h5>
     </nav>
   </header>
 
 <body class="mt-3" style="background-color: #8a546d;">
+    <body>
+        <div class="container, scrollbar" id="myScrollspy">
+            <div class="panel-group" id="accordion">
+    
+        ...
+    
+
     <div class="container">
            <div class="">
              <!-- first main div -->
